Major fix to get the package working

--- a/RLumCarlo.BuildResults/RLumCarlo_0.0.2-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.0.2-Functions.html
@@ -1,6 +1,6 @@
 
 <p class='character'><h2 align="center">Major functions in the R package 'RLumCarlo'</h2>
-           <h4 align="center"> [version: 0.0.1 ]</h4>
+           <h4 align="center"> [version: 0.0.2 ]</h4>
            <style type="text/css">
            <!--
            h2 {font-family: Arial, Helvetica, sans-serif
@@ -85,42 +85,24 @@
 <tr> 
 <td class=firstcolumn>3
 </td>
-<td class=cellinside>reexports
-</td>
-<td class=cellinside>Objects exported from other packages
-</td>
-<td class=cellinside><br /> These objects are imported from other packages. Follow the links<br /> below to see their documentation.<br /> <br /> <br />    magrittr %>% <br />
-</td>
-<td class=cellinside> 
-</td>
-<td class=cellinside> 
-</td>
-<td class=cellinside> 
-</td>
-<td class=cellinside> 
-</td></tr>
- 
-<tr> 
-<td class=firstcolumn>4
-</td>
 <td class=cellinside>run_MC_CW_IRSL
 </td>
 <td class=cellinside>Run Monte-Carlo simulation for CW-IRSL
 </td>
 <td class=cellinside><br /> Run Monte-Carlo simulation for CW-IRSL<br />
 </td>
-<td class=cellinside>0.0.1
+<td class=cellinside>0.0.2
 </td>
 <td class=cellinside>[2017-01-31]
 
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside><br /> Johannes Friedrich, University of Bayreuth (Germany)<br />
+<td class=cellinside><br /> Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer, IRAMAT-CRP2A, Université Bordeaux Montaigne (France)<br />
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>5
+<td class=firstcolumn>4
 </td>
 <td class=cellinside>run_MC_ISO
 </td>
@@ -139,7 +121,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>6
+<td class=firstcolumn>5
 </td>
 <td class=cellinside>run_MC_LM_OSL
 </td>
@@ -158,7 +140,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>7
+<td class=firstcolumn>6
 </td>
 <td class=cellinside>run_MC_TL
 </td>
