--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0.11-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0.11-Functions.html
@@ -1,6 +1,6 @@
 
 <p class='character'><h2 align="center">Major functions in the R package 'RLumCarlo'</h2>
-           <h4 align="center"> [version: 0.1.0.7 ]</h4>
+           <h4 align="center"> [version: 0.1.0.11 ]</h4>
            <style type="text/css">
            <!--
            h2 {font-family: Arial, Helvetica, sans-serif
@@ -141,6 +141,25 @@
  
 <tr> 
 <td class=firstcolumn>6
+</td>
+<td class=cellinside>run_MC_TL_DELOC
+</td>
+<td class=cellinside>Run Monte-Carlo simulation for TL for GOT model
+</td>
+<td class=cellinside><br /> ##TODO<br />
+</td>
+<td class=cellinside>0.0.1
+
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+</td></tr>
+ 
+<tr> 
+<td class=firstcolumn>7
 </td>
 <td class=cellinside>run_MC_TL
 </td>
