Include remaining docu comments from Christoph

--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0.9000-131-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0.9000-131-Functions.html
@@ -1,6 +1,6 @@
 
 <p class='character'><h2 align="center">Major functions in the R package 'Luminescence'</h2>
-           <h4 align="center"> [version: 0.1.0.9000-130 ]</h4>
+           <h4 align="center"> [version: 0.1.0.9000-131 ]</h4>
            <style type="text/css">
            <!--
 
@@ -71,7 +71,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS-Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. methods_RLumCarlo(): methods_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -92,7 +93,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060,<br /> Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -113,7 +115,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_CW_IRSL_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -134,7 +137,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_CW_IRSL_TUN(): Run Monte-Carlo Simulation for CW-IRSL (tunneling transitions). Function version 0.2.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -155,7 +159,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_CW_OSL_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -176,7 +181,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_ISO_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -197,7 +203,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_ISO_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -218,7 +225,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -239,7 +247,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_LM_OSL_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -260,7 +269,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_LM_OSL_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -281,7 +291,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS-Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_LM_OSL_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -302,7 +313,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_TL_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -312,7 +324,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (localized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermo-luminesence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve a state of the recombination center.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an excited state of the recombination center.
 </td>
 <td class=cellinside>0.1.0
 
@@ -323,7 +335,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_TL_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -333,7 +346,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (tunneling transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermo-luminesence (TL) caused by tunnelling (TUN) transitions.  Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into a state of the recombination center.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) caused by tunnelling (TUN) transitions.  Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into a recombination center.
 </td>
 <td class=cellinside>0.1.0
 
@@ -344,7 +357,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer,<br /> IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_TL_TUN(): Run Monte-Carlo Simulation for TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 	</tbody>
@@ -353,7 +367,7 @@
  <br>
 
 <p class='character'><h2 align="center">Major functions in the R package 'Luminescence'</h2>
-           <h4 align="center"> [version: 0.1.0.9000-130 ]</h4>
+           <h4 align="center"> [version: 0.1.0.9000-131 ]</h4>
            <style type="text/css">
            <!--
 
@@ -424,7 +438,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS-Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. methods_RLumCarlo(): methods_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -445,7 +460,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060,<br /> Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -466,7 +482,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_CW_IRSL_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -487,7 +504,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_CW_IRSL_TUN(): Run Monte-Carlo Simulation for CW-IRSL (tunneling transitions). Function version 0.2.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -508,7 +526,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_CW_OSL_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -529,7 +548,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_ISO_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -550,7 +570,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_ISO_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -571,7 +592,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -592,7 +614,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_LM_OSL_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -613,7 +636,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_LM_OSL_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -634,7 +658,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS-Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_LM_OSL_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -655,7 +680,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_TL_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -665,7 +691,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (localized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermo-luminesence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve a state of the recombination center.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an excited state of the recombination center.
 </td>
 <td class=cellinside>0.1.0
 
@@ -676,7 +702,8 @@
 </td>
 <td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Kreutzer, S., 2019. run_MC_TL_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 <tr> 
@@ -686,7 +713,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (tunneling transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermo-luminesence (TL) caused by tunnelling (TUN) transitions.  Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into a state of the recombination center.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) caused by tunnelling (TUN) transitions.  Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into a recombination center.
 </td>
 <td class=cellinside>0.1.0
 
@@ -697,7 +724,8 @@
 </td>
 <td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer,<br /> IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)<br />
 </td>
-<td class=cellinside> 
+<td class=cellinside>Friedrich, J., Kreutzer, S., 2019. run_MC_TL_TUN(): Run Monte-Carlo Simulation for TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-131. 
+
 </td></tr>
  
 	</tbody>
