--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
@@ -113,7 +113,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_CW_IRSL_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -148,7 +148,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for CW-OSL (delocalized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminesence (CW-OSL) using the one trap one recombination center (OTOR) model. The term delocalized here refers to the involvement of the conduction band.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminescence (CW-OSL) using the one trap one recombination centre (OTOR) model. The term delocalized here refers to the involvement of the conduction band.
 </td>
 <td class=cellinside>0.1.0
 
@@ -157,7 +157,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_CW_OSL_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -179,7 +179,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_ISO_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -201,7 +201,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_ISO_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -223,7 +223,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Friedrich, J., Kreutzer, S., 2020. run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -245,7 +245,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_LM_OSL_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -267,7 +267,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_LM_OSL_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -311,7 +311,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_TL_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -333,7 +333,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_TL_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -480,7 +480,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_CW_IRSL_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -515,7 +515,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for CW-OSL (delocalized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminesence (CW-OSL) using the one trap one recombination center (OTOR) model. The term delocalized here refers to the involvement of the conduction band.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminescence (CW-OSL) using the one trap one recombination centre (OTOR) model. The term delocalized here refers to the involvement of the conduction band.
 </td>
 <td class=cellinside>0.1.0
 
@@ -524,7 +524,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_CW_OSL_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -546,7 +546,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_ISO_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -568,7 +568,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_ISO_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -590,7 +590,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Friedrich, J., Kreutzer, S., 2020. run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -612,7 +612,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_LM_OSL_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -634,7 +634,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_LM_OSL_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -678,7 +678,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_TL_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
@@ -700,7 +700,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
 </td>
 <td class=cellinside>Kreutzer, S., 2020. run_MC_TL_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
