--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
@@ -302,7 +302,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (delocalized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminescence (TL) using the one trap one recombination centre (OTOR) model. Delocalised refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s.
 </td>
 <td class=cellinside>0.1.0
 
@@ -669,7 +669,7 @@
 </td>
 <td class=cellinside>Run Monte-Carlo Simulation for TL (delocalized transitions)
 </td>
-<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s.
+<td class=cellinside>Runs a Monte-Carlo (MC) simulation of thermoluminescence (TL) using the one trap one recombination centre (OTOR) model. Delocalised refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s.
 </td>
 <td class=cellinside>0.1.0
 
