--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
@@ -60,18 +60,17 @@
 </td>
 <td class=cellinside>methods_RLumCarlo
 </td>
-<td class=cellinside>Methods for S3-generics implemented for the package 'RLumCarlo'.  Summarize RLumCarlo modelling results for easy plotting
-</td>
-<td class=cellinside>0.1.0
-
+<td class=cellinside>Methods for S3-generics implemented for the package 'RLumCarlo'.
 </td>
 <td class=cellinside> 
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br /> <br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+<td class=cellinside> 
 </td>
-<td class=cellinside>Friedrich, J., Kreutzer, S., 2020. methods_RLumCarlo(): methods_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom),<br /> Johannes Friedrich, University of Bayreuth (Germany),<br />
+</td>
+<td class=cellinside>Kreutzer, S., Friedrich, J., 2020. methods_RLumCarlo(): methods_RLumCarlo. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
 </td></tr>
  
@@ -427,18 +426,17 @@
 </td>
 <td class=cellinside>methods_RLumCarlo
 </td>
-<td class=cellinside>Methods for S3-generics implemented for the package 'RLumCarlo'.  Summarize RLumCarlo modelling results for easy plotting
-</td>
-<td class=cellinside>0.1.0
-
+<td class=cellinside>Methods for S3-generics implemented for the package 'RLumCarlo'.
 </td>
 <td class=cellinside> 
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br /> <br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+<td class=cellinside> 
 </td>
-<td class=cellinside>Friedrich, J., Kreutzer, S., 2020. methods_RLumCarlo(): methods_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom),<br /> Johannes Friedrich, University of Bayreuth (Germany),<br />
+</td>
+<td class=cellinside>Kreutzer, S., Friedrich, J., 2020. methods_RLumCarlo(): methods_RLumCarlo. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
 </td></tr>
  
