--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
@@ -56,6 +56,28 @@
 <tr> 
 <td class=firstcolumn>1
 </td>
+<td class=cellinside>create_ClusterSystem
+</td>
+<td class=cellinside>Create dosimetric cluster system
+</td>
+<td class=cellinside>In order to allow interaction of an spatial a correlation clusters in RLumCarlo, first a dosimetric system needs to be created in a three-dimensional space, which is the purpose of this function.
+</td>
+<td class=cellinside>0.1.0
+
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+</td>
+<td class=cellinside>Kreutzer, S., 2020. create_ClusterSystem(): Create dosimetric cluster system. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+
+</td></tr>
+ 
+<tr> 
+<td class=firstcolumn>2
+</td>
 <td class=cellinside>methods_RLumCarlo
 </td>
 <td class=cellinside>methods_RLumCarlo
@@ -75,7 +97,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>2
+<td class=firstcolumn>3
 </td>
 <td class=cellinside>plot_RLumCarlo
 </td>
@@ -97,7 +119,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>3
+<td class=firstcolumn>4
 </td>
 <td class=cellinside>run_MC_CW_IRSL_LOC
 </td>
@@ -119,7 +141,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>4
+<td class=firstcolumn>5
 </td>
 <td class=cellinside>run_MC_CW_IRSL_TUN
 </td>
@@ -141,7 +163,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>5
+<td class=firstcolumn>6
 </td>
 <td class=cellinside>run_MC_CW_OSL_DELOC
 </td>
@@ -163,7 +185,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>6
+<td class=firstcolumn>7
 </td>
 <td class=cellinside>run_MC_ISO_DELOC
 </td>
@@ -185,7 +207,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>7
+<td class=firstcolumn>8
 </td>
 <td class=cellinside>run_MC_ISO_LOC
 </td>
@@ -207,7 +229,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>8
+<td class=firstcolumn>9
 </td>
 <td class=cellinside>run_MC_ISO_TUN
 </td>
@@ -229,7 +251,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>9
+<td class=firstcolumn>10
 </td>
 <td class=cellinside>run_MC_LM_OSL_DELOC
 </td>
@@ -251,7 +273,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>10
+<td class=firstcolumn>11
 </td>
 <td class=cellinside>run_MC_LM_OSL_LOC
 </td>
@@ -273,7 +295,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>11
+<td class=firstcolumn>12
 </td>
 <td class=cellinside>run_MC_LM_OSL_TUN
 </td>
@@ -295,7 +317,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>12
+<td class=firstcolumn>13
 </td>
 <td class=cellinside>run_MC_TL_DELOC
 </td>
@@ -317,7 +339,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>13
+<td class=firstcolumn>14
 </td>
 <td class=cellinside>run_MC_TL_LOC
 </td>
@@ -339,7 +361,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>14
+<td class=firstcolumn>15
 </td>
 <td class=cellinside>run_MC_TL_TUN
 </td>
@@ -422,6 +444,28 @@
 <tr> 
 <td class=firstcolumn>1
 </td>
+<td class=cellinside>create_ClusterSystem
+</td>
+<td class=cellinside>Create dosimetric cluster system
+</td>
+<td class=cellinside>In order to allow interaction of an spatial a correlation clusters in RLumCarlo, first a dosimetric system needs to be created in a three-dimensional space, which is the purpose of this function.
+</td>
+<td class=cellinside>0.1.0
+
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside> 
+</td>
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+</td>
+<td class=cellinside>Kreutzer, S., 2020. create_ClusterSystem(): Create dosimetric cluster system. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+
+</td></tr>
+ 
+<tr> 
+<td class=firstcolumn>2
+</td>
 <td class=cellinside>methods_RLumCarlo
 </td>
 <td class=cellinside>methods_RLumCarlo
@@ -441,7 +485,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>2
+<td class=firstcolumn>3
 </td>
 <td class=cellinside>plot_RLumCarlo
 </td>
@@ -463,7 +507,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>3
+<td class=firstcolumn>4
 </td>
 <td class=cellinside>run_MC_CW_IRSL_LOC
 </td>
@@ -485,7 +529,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>4
+<td class=firstcolumn>5
 </td>
 <td class=cellinside>run_MC_CW_IRSL_TUN
 </td>
@@ -507,7 +551,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>5
+<td class=firstcolumn>6
 </td>
 <td class=cellinside>run_MC_CW_OSL_DELOC
 </td>
@@ -529,7 +573,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>6
+<td class=firstcolumn>7
 </td>
 <td class=cellinside>run_MC_ISO_DELOC
 </td>
@@ -551,7 +595,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>7
+<td class=firstcolumn>8
 </td>
 <td class=cellinside>run_MC_ISO_LOC
 </td>
@@ -573,7 +617,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>8
+<td class=firstcolumn>9
 </td>
 <td class=cellinside>run_MC_ISO_TUN
 </td>
@@ -595,7 +639,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>9
+<td class=firstcolumn>10
 </td>
 <td class=cellinside>run_MC_LM_OSL_DELOC
 </td>
@@ -617,7 +661,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>10
+<td class=firstcolumn>11
 </td>
 <td class=cellinside>run_MC_LM_OSL_LOC
 </td>
@@ -639,7 +683,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>11
+<td class=firstcolumn>12
 </td>
 <td class=cellinside>run_MC_LM_OSL_TUN
 </td>
@@ -661,7 +705,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>12
+<td class=firstcolumn>13
 </td>
 <td class=cellinside>run_MC_TL_DELOC
 </td>
@@ -683,7 +727,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>13
+<td class=firstcolumn>14
 </td>
 <td class=cellinside>run_MC_TL_LOC
 </td>
@@ -705,7 +749,7 @@
 </td></tr>
  
 <tr> 
-<td class=firstcolumn>14
+<td class=firstcolumn>15
 </td>
 <td class=cellinside>run_MC_TL_TUN
 </td>
