--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.html
@@ -112,9 +112,9 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom) <br /> Johannes Friedrich, University of Bayreuth (Germany)<br />
 </td>
-<td class=cellinside>Friedrich, J., Kreutzer, S., 2020. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+<td class=cellinside>Kreutzer, S., Friedrich, J., 2020. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
 </td></tr>
  
@@ -500,9 +500,9 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside>Johannes Friedrich, University of Bayreuth (Germany),<br /> Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom)<br />
+<td class=cellinside>Sebastian Kreutzer, Geography & Earth Sciences, Aberystwyth University (United Kingdom) <br /> Johannes Friedrich, University of Bayreuth (Germany)<br />
 </td>
-<td class=cellinside>Friedrich, J., Kreutzer, S., 2020. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+<td class=cellinside>Kreutzer, S., Friedrich, J., 2020. plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
 
 </td></tr>
  
